# ComputerGraphics

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  complex.c  complex.h  julia.c  main.c  makefile  mesh.c  model.c  tga.c
.github/workflows/: cmake.yml
tests/: read_obj.c  read_tga.c  write_tga.c
